# SCAOUTra

./: .env.example  .gitignore  AuditApplication.js  CNAME  Footer.js  Hero.js  InefficiencyCalculator.js  StarBackground.js  ai_news_digest.py  api.js  env.example.js  index.html  main.css  main.js  package-lock.json  package.json  pyproject.toml  settings.js  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.claude/skills/: orient.md
.claude/skills/add-logo/: SKILL.md
.claude/skills/add-node/: SKILL.md
.claude/skills/audit-registry/: SKILL.md
.claude/skills/omnious/: SKILL.md
.claude/skills/relentless/: SKILL.md
.claude/skills/scaffold-node/: SKILL.md
.claude/skills/suggest/: SKILL.md
.claude/skills/swarm/: SKILL.md
.claude/skills/token-optimizer/: SKILL.md
.claude/skills/ui-ux-ultra/: SKILL.md
.github/workflows/: deploy.yml
agency-growth-engine/: index.html
agency-growth-engine/src/: main.js
apps-script/: Code.gs  SETUP_GUIDE.md
research_agent/: agent.py  dashboard.html  demo_data.py  server.py  template.html
src/: api.js  main.css  main.js  settings.js  web-main.js
src/components/: Calculator.js  CanvasBackground.js  ContainerScroll.js  Cursor.js  Footer.js  Hero.js  LeadForm.js  Marquee.js  Modals.js  Navbar.js  Pricing.js  Protocol.js  Results.js  ShaderBackground.js  SplineBackground.js  TextReveal.js  ThreeBackground.js  VideoBackground.js  WebPricing.js
src/utils/: counter.js  magnet.js  parallax.js  reveal.js  scramble.js  smoothScroll.js  spotlight.js  transition.js
web/: index.html
(+9 files in other folders)
